# spriter

./: .gitignore  Cargo.toml  README.md
examples/: canvas.rs  dot.rs  event_handler.rs  key_handler.rs  snake.rs
src/: handler.rs  lib.rs  window.rs
src/gl_cover/: buffer.rs  mod.rs  program.rs  texture.rs  vao.rs
