[package]
name = "spriter"
version = "0.1.0"
authors = ["RustySkill <rustySkilll@gmail.com>"]
edition = "2018"

autoexamples = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.25"
gl = "0.14"
lazy_static = "1.4"

[dev-dependencies]
rand = "*"